overflow fix

--- a/style_contact.css
+++ b/style_contact.css
@@ -11,6 +11,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Noto Sans", sans-serif;
+  overflow-x: hidden;
 }
 
 header {
